crates/reinhardt-forms/crates/macros/tests/ui/fail/invalid_property_type.stderr
error: form! macro is not yet implemented
  --> tests/ui/fail/invalid_property_type.rs:8:15
   |
8  |       let _form = form! {
   |  _______________^
9  | |         fields: {
10 | |             username: CharField {
11 | |                 max_length: "not a number",
12 | |             },
13 | |         },
14 | |     };
   |  |_____^
   |
   = note: this error originates in the macro `form` (in Nightly builds, run with -Z macro-backtrace for more info)
